--- a/src/App.css
+++ b/src/App.css
@@ -1,32 +1,27 @@
-.App {
+*{
+  padding: 0;
+  margin: 0;
+}
+.container {
   text-align: center;
 }
-
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
+.container h1{
+  color: darkslategrey;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.container .board{
+  display: inline-flex;
+  flex-wrap: wrap;
+  width: 306px;
+  padding-top: 30px;
+}
+.container .board .box {
+  height: 100px;
+  width: 100px;
+  border: 1px solid black;
+  display: inline-block;
+  line-height: 100px;
+  font-size: 30px;
 }
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
+.selected {background: #d2d2d2;}
